# uttu

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
docs/: ADMIN_IMPLEMENTATION_PLAN.md  CLAUDE.md  COLLECTION-STATUS.md  DAILY_BRIEFING_PROMPT.md  DATA-COLLECTION.md  MOBILE_AUDIT_REPORT.md  MOBILE_NIGHT_REPORT.md  MUSINSA-API.md  MYPAGE_IMPLEMENTATION_PLAN.md  STAGE_11_TO_16_NIGHT_PROMPT.md  TODO.md  USER-FEATURES.md  UTTU-AI-SESSION-PROMPT.md  UTTU-OVERVIEW.md  anomaly-detection-spec.md  daily-briefing-design.md  daily_report_2026-05-28.html  snap-viewer-renewal-prompt.md
docs/design/: UTTU Mobile (standalone).html  brands.md  companies.md  dart.md  design.md  products.md
docs/help-source/: anomaly-guide.md  brand-ranking-guide.md  companies-guide.md  home-guide.md  (+3 more)
logs/: .progress_session.json
scripts/: collection_monitor.py  leekids_review_collect.py  progress_notify.py  resume_and_complete.sh  review_backfill_monitor.py  run_brand_ranking.sh  run_briefing.sh  run_color_group.sh  run_daily.sh  run_dart.sh  run_detect.sh  run_dispatcher.sh  run_event.sh  run_full_collection.sh  run_funding_poll.sh  run_magazine.sh  run_magazine_products.sh  run_news.sh  run_notify_loop.sh  run_own_products.sh  run_product.sh  run_product_detail.sh  run_product_refresh_own.sh  run_ranking.sh  run_recommend.sh  run_reviews.sh  run_reviews_full.sh  run_snap.sh  watch_reviews_full_done.sh
supabase/: config.toml
viewer/: .eslintrc.json  package-lock.json  package.json  tsconfig.tsbuildinfo
worker/: main.py
(+329 files in other folders)
