[project]
name = "uttu-worker"
version = "0.1.0"
description = "UTTU — 무신사 데이터 수집 Worker (B.CAVE 인텔리전스)"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.44",
    "httpx>=0.27",
    "supabase>=2.5",
    "snowflake-connector-python>=3.10",
    "cryptography>=42",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
